--- a/app/css/navbar-snorql.css
+++ b/app/css/navbar-snorql.css
@@ -1,10 +1,10 @@
 .navbar-snorql {
-    background-color: #ccccff;
-    border-color: #9f9fff;
+    background-color: #222;
+    border-color: #080808;
 }
 
 .navbar-snorql .navbar-brand {
-    color: #333;
+    color: #9d9d9d;
 }
 
 .navbar-snorql .navbar-brand:hover,
@@ -14,13 +14,13 @@
 }
 
 .navbar-snorql .navbar-nav > li > a {
-    color: #333;
+    color: #9d9d9d;
 }
 
 .navbar-snorql .navbar-nav > li > a:hover,
 .navbar-snorql .navbar-nav > li > a:focus {
     color: #fff;
-    background-color: #b3b3ff;
+    background-color: transparent;
 }
 
 .navbar-snorql .navbar-nav > .active > a,
