Making footer as nextprot-search

--- a/app/assets/partials/footer.html
+++ b/app/assets/partials/footer.html
@@ -1,4 +1,4 @@
-<!--<footer class="container-fluid small" ng-controller="ReleaseInfoCtrl">
+<footer class="container-fluid small" ng-controller="ReleaseInfoCtrl">
     <div class="row">
       <div class="col-lg-12">
 
@@ -14,24 +14,4 @@
       </div>
     </div>
     </div>
-  </footer> -->
-
- <footer class="container-fluid small">
-   <div class="row">
-     <div class="col-lg-12">
-
-       <div class="col-md-12 text-left">
-         <a href="/copyright">&copy; 2016 SIB Swiss Institute of Bioinformatics</a>
-         <span> | </span>
-         <a href="/legal-disclaimer">Legal disclaimer</a>
-         <span>| </span>
-         <a href="#" target="_blank">v<span sq-build-version></span></a>
-           <span>| </span>
-           <a class="ft-item" href="https://github.com/calipho-sib/" target="_blank">
-               <span class="fa fa-github" aria-hidden="true"></span> For developers
-           </a>
-       </div>
-     </div>
-     </div>
-   </div>
- </footer>
+  </footer>
