Add Lato font like search.nextprot.org

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -8,6 +8,7 @@ body {
 }
 body {
   padding-top: 70px;
+  font-family: "Lato","Helvetica Neue", "Helvetica", sans-serif;
 }
 .prefixes {
   font-family: monospace;
