--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -7,6 +7,7 @@ footer {
     line-height: 25px;
     font-size: 0.9em;
     z-index: 1000;
+    font-family: "Lato","Helvetica Neue", "Helvetica", sans-serif;
 }
 
 footer, footer a, footer a:visited {
