Fixing mouse cursor for data release and app release

--- a/app/assets/partials/footer.html
+++ b/app/assets/partials/footer.html
@@ -5,8 +5,8 @@
         <div class="col-md-12 text-left">
           <a class="ft-item" href="/copyright">&copy; 2016 SIB Swiss Institute of Bioinformatics</a>
           <a class="ft-item" href="/legal-disclaimer">Legal disclaimer</a>
-          <span class="ft-item ui-version">Data release {{releaseInfo.databaseRelease}}</span>
-          <span class="ft-item ui-version">Application release {{releaseInfosFormatted}}</span>
+          <span class="ft-item">Data release {{releaseInfo.databaseRelease}}</span>
+          <span class="ft-item">Application release {{releaseInfosFormatted}}</span>
           <a class="ft-item" href="https://github.com/calipho-sib/" target="_blank">
             <span class="fa fa-github" aria-hidden="true"></span> For developers
           </a>
