--- a/app/assets/partials/footer.html
+++ b/app/assets/partials/footer.html
@@ -3,7 +3,7 @@
       <div class="col-lg-12">
 
         <div class="col-md-12 text-left">
-          <a class="ft-item" href="/copyright">&copy; 2016 SIB Swiss Institute of Bioinformatics</a>
+          <a class="ft-item" href="/copyright">&copy; 2011 - {{currentYear}} SIB Swiss Institute of Bioinformatics</a>
           <a class="ft-item" href="/legal-disclaimer">Legal disclaimer</a>
           <span class="ft-item">Data release {{releaseInfo.databaseRelease}}</span>
           <span class="ft-item">Application release {{releaseInfosFormatted}}</span>
