replaced copy and create values buttons by keyboard bindings to p and r

--- a/app/assets/partials/home.html
+++ b/app/assets/partials/home.html
@@ -23,8 +23,8 @@
                                 ng-click="executeQuery(snorql.query,output)">Go
                         </button>
                         <button type="button" class="btn btn-default" ng-click="snorql.reset()">Reset</button>
-                        <button type="button" class="btn btn-default" ng-click="snorql.createEntryValues()">Create entry values<br/>from pasted Accs</button>
-                        <button type="button" class="btn btn-default" ng-click="snorql.copyResults(snorql.result.results.bindings)">Copy results<br/>as values</button>
+                        <!--  <button type="button" class="btn btn-default" ng-click="snorql.createEntryValues()">Create entry values<br/>from pasted Accs</button>
+                        <button type="button" class="btn btn-default" ng-click="snorql.copyResults(snorql.result.results.bindings)">Copy results<br/>as values</button> -->
                         <div class="input-group pull-right">
                             <input type="text" class="form-control" ng-model="term" placeholder="eg. peroxisome, liver">
                     <span class="input-group-btn">
