--- a/app/assets/partials/home.html
+++ b/app/assets/partials/home.html
@@ -35,7 +35,7 @@
                     </div>
                 </form>
 
-                <h5 ng-if="snorql.selectedQueryId != 0">Found a bug? <a target="_blank" href="{{snorql.selectedQueryId | getGitHubUrl}}">Improve this query!</a></h5>
+                <h5 ng-if="snorql.selectedQueryId != 0">Found a bug? <a href="mailto:support@nextprot.org?subject=[Improving neXtProt query {{snorql.selectedQueryId | getNxqId}}]">Improve this query!</a></h5>
 
             </div>
 
