--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6,6 +6,9 @@ html,
 body {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
 }
+.query-165 { /* HOTFIX: to remove experimental query from API*/
+  display: none;
+}
 body {
   font-family: "Lato","Helvetica Neue", "Helvetica", sans-serif;
   height: 100vh;
