--- a/app/css/app.css
+++ b/app/css/app.css
@@ -153,3 +153,6 @@ textarea.form-control{
     bottom: 5px;
   }
 }
+.query-165 { /* HOTFIX: to remove experimental query from API*/
+  display: none;
+}
