Add data license information in footer (NEXTPROT-1950)

--- a/app/assets/partials/footer.html
+++ b/app/assets/partials/footer.html
@@ -6,6 +6,7 @@
           <a class="ft-item" href="/copyright">&copy; 2011 - {{currentYear}} SIB Swiss Institute of Bioinformatics</a>
           <a class="ft-item" href="/legal-disclaimer">Legal disclaimer</a>
           <span class="ft-item">Data release {{releaseInfo.databaseRelease}}</span>
+          <a class="ft-item" href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Data CC BY 4.0</a>
           <span class="ft-item">Application release {{releaseInfosFormatted}}</span>
           <a class="ft-item" href="https://github.com/calipho-sib/" target="_blank">
             <span class="fa fa-github" aria-hidden="true"></span> For developers
