Fix nextprot URL

--- a/app/assets/partials/home.html
+++ b/app/assets/partials/home.html
@@ -91,7 +91,7 @@
                     <div ng-if="filterTag == 'My queries'">
                         <p style="margin: 10px">
                             You can create / save your own queries on the
-                            <a target="_blank" href="https://search.nextprot.org/proteins/search?mode=advanced">search.nextprot.org</a>
+                            <a target="_blank" href="https://www.nextprot.org/proteins/search?mode=advanced">www.nextprot.org</a>
                             interface or
                             using the <a target="_blank" href="https://api.nextprot.org">API.</a>
                         </p>
