Fix search image icon

--- a/app/assets/partials/home.html
+++ b/app/assets/partials/home.html
@@ -30,7 +30,7 @@
                             <span class="input-group-btn">
                                 <button type="button" class="btn btn-default " ng-click="searchTerm(term)"
                                         ng-disabled="!term||waiting">
-                                    <img src="../img/search.png"/>
+                                    <img src="../img/search.png"  style="width:15px;height:auto" />
                                 </button>
                             </span>
                         </div>
