--- a/app/assets/partials/home.html
+++ b/app/assets/partials/home.html
@@ -6,7 +6,7 @@
                 </button>
             </p>
             <div class="snorql">
-                <h5>SPARQL endpoint: <a ng-href="{{snorql.endpoint()}}">{{snorql.endpoint()}}</a></h5>
+                <h5>SPARQL endpoint: <a ng-href="https://sparql.nextprot.org<">https://sparql.nextprot.org</a></h5>
                 <a href="#" ng-click="showPrefixes = !showPrefixes">{{showPrefixes? "Hide SPARQL prefixes" : "PREFIX..."}}</a>
                 <ul ng-show="showPrefixes" class="list-unstyled prefixes">
                     <li ng-repeat="prefix in getPrefixes()">{{prefix}}</li>
@@ -34,7 +34,7 @@
                                 </button>
                             </span>
                         </div>
-                        <div class="pull-right" style="padding-top:18px;padding-right:5px;font-weight:bold"> Search for Terms</div>
+                        <div class="pull-right" style="padding-top:8px;padding-right:5px;font-weight:bold"> Search for Terms<br><span style="font-weight:normal;font-size:12px;font-style=: ;font-style: inherit;">No regexes or wildcards</span></div>
                     </div>
                 </form>
 
